# pdfsynth

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  repomix-output.xml
.github/workflows/: docker-publish.yml
assets/: PDFA_def.ps
src/: main.rs
src/api/: error.rs  health.rs  mod.rs  render.rs  state.rs
src/infra/: browser.rs  ghostscript.rs  mod.rs  templates.rs
tests/: e2e.sh
