[package]
name = "pdfsynth"
version = "0.1.0"
edition = "2021"
authors = ["Synth Solutions"]
description = "High-performance PDF/A-1a rendering microservice built with Rust"
license = "MIT"
repository = "https://github.com/your-username/pdfsynth"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.19"
headless_chrome = { version = "1.0", features = ["fetch"] }
thiserror = "1.0"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
urlencoding = "2.1.3"
tempfile = "3.23.0"
